updated overflow issue in tables

--- a/src/scss/filejet-scss/entities/_entities-details-v1.scss
+++ b/src/scss/filejet-scss/entities/_entities-details-v1.scss
@@ -657,7 +657,10 @@ $font-sora: "Sora", sans-serif;
       width: inherit !important;
       max-width: inherit !important;
       min-height: 0 !important;
-      overflow-y: hidden;
+    }
+
+    .dataTables_scrollBody{
+      overflow-y: hidden !important;
     }
   }
 
