--- a/src/scss/filejet-scss/styles.css
+++ b/src/scss/filejet-scss/styles.css
@@ -22336,7 +22336,9 @@ body *::-webkit-scrollbar-thumb {
   width: inherit !important;
   max-width: inherit !important;
   min-height: 0 !important;
-  overflow-y: hidden;
+}
+.entityDetailTableCard .dataTables_wrapper .dataTables_scroll .dataTables_scrollBody {
+  overflow-y: hidden !important;
 }
 .entityDetailTableCard .entityDetailRegistrationTable .dataTables_wrapper .dataTable thead th:first-child {
   width: 200px;
